updated ai model to check connection to reports before plannning(if no connection, still plan according to prompt)